contrast fix

--- a/lesson03/styles/base.css
+++ b/lesson03/styles/base.css
@@ -60,7 +60,7 @@ section {
 
 .accent2 {
     background-color: #0096B8;
-    color: #ECF1FD;
+    color: #10192E;
 }
 
 .accent3 {
